[package]
name = "bat"
version = "0.1.0"
edition = "2021"

[dependencies]
curl = "0.4.48"
regex = "1.11.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
semver = "1.0.26"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
zip = "4.0.0"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
